Bug fix: prevent line break in team name

--- a/less/pages/scoreboard.less
+++ b/less/pages/scoreboard.less
@@ -40,6 +40,9 @@ h1 {
 }
 
 .team-name {
+
+    white-space: nowrap;
+
     &.placeholder {
         content: 'Home';
         visibility: hidden;
